# hasura-auth-webhook

./: .dockerignore  .env.sample  Cargo.toml  Dockerfile  auth-webhook.Dockerfile  docker-compose.yaml  rustfmt.toml
crates/auth-webhook/: Cargo.toml
crates/auth-webhook/src/: auth_handler.rs  cli.rs  errors.rs  main.rs  validator.rs
crates/axum-ext/: Cargo.toml
crates/axum-ext/src/: lib.rs  shutdown.rs
crates/tracing-ext/: Cargo.toml
crates/tracing-ext/src/: graphql.rs  http.rs  lib.rs  otlp.rs  request.rs  tracer.rs
src/: cli.rs  main.rs  shutdown.rs
