[package]
name = "hasura-auth-webhook"
version = "0.1.0"
edition = "2021"


[dependencies]
anyhow = "1.0.93"
clap = { version = "4.5.21", features = ["derive", "cargo", "env"] }
http = "1.1.0"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.41.1", features = ["full"] }
tracing = "0.1.41"
thiserror = "2.0.3"
tracing-error = "0.2.0"
dotenvy = "0.15.7"
env_logger = "0.11.5"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
reqwest = { version = "0.12", features = ["json"] }
axum = "0.7.9"
axum-extra = { version = "0.9.6", features = ["typed-header"] }
axum-core = "0.4.5"
tower-http = { version = "0.6.2", features = [
	"cors",
	"fs",
	"decompression-gzip",
	"decompression-zstd",
	"trace",
] }
chrono = "0.4.38"
