[workspace]

members = [
	"crates/auth-webhook",
	# external
	"crates/tracing-ext",
	"crates/axum-ext",
]

# Explicitly set the resolver to version 2, which is the default for packages with edition >= 2021
# https://doc.rust-lang.org/edition-guide/rust-2021/default-cargo-resolver.html
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.79"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
tokio = { version = "1.36.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

http = "1.1.0"
axum = "0.7.9"
axum-core = "0.4.5"
axum-extra = { version = "0.9.6", features = ["typed-header"] }
tower-http = { version = "0.6.2", features = [
	"cors",
	"fs",
	"decompression-gzip",
	"decompression-zstd",
	"trace",
] }

# tracing
tracing = "0.1.41"
tracing-subscriber = { version = "0.3", features = ["json"] }

# opentelemetry
opentelemetry = "0.27.1"
opentelemetry-contrib = "0.19.0"
opentelemetry-http = "0.27.0"
opentelemetry-otlp = { version = "0.27.0", features = ["grpc-tonic"] }
opentelemetry-semantic-conventions = "0.27.0"
opentelemetry-stdout = { version = "0.27.0", default-features = false, features = [
	"trace",
] }
opentelemetry-zipkin = "0.27.0"
opentelemetry_sdk = { version = "0.27.0", features = ["rt-tokio"] }

derive_more = { version = "1.0", features = ["full"] }
