[package]
name = "auth-webhook"
version = "0.1.0"
edition = "2021"


[dependencies]
anyhow = "1.0.93"
clap = { version = "4.5.21", features = ["derive", "cargo", "env"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.41.1", features = ["full"] }
tracing = "0.1.41"
thiserror = "2.0.3"
tracing-error = "0.2.0"
dotenvy = "0.15.7"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
reqwest = { version = "0.12", features = ["json"] }

axum = { workspace = true }
axum-core = { workspace = true }
axum-extra = { workspace = true }
tower-http = { workspace = true }

chrono = "0.4.38"

# built-in
axum-ext = { path = "../axum-ext" }
tracing-ext = { path = "../tracing-ext" }
