[package]
name = "auth-webhook"
version = "0.1.0"
edition = "2021"


[dependencies]
# built-in
axum-ext = { path = "../axum-ext" }
tracing-ext = { path = "../tracing-ext" }

anyhow = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = "2.0.3"
tracing-error = { workspace = true }
dotenvy = { workspace = true }
tracing-subscriber = { workspace = true }
reqwest = { workspace = true }

axum = { workspace = true }
axum-core = { workspace = true }
axum-extra = { workspace = true }
tower-http = { workspace = true }
