[package]
name = "tracing-ext"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
axum = { workspace = true }
axum-core = { workspace = true }
axum-extra = { workspace = true }
derive_more = { workspace = true }
http = { workspace = true }

# opentelemetry
opentelemetry = { workspace = true }
opentelemetry-contrib = { workspace = true }
opentelemetry-http = { workspace = true }
opentelemetry-otlp = { workspace = true }
opentelemetry-semantic-conventions = { workspace = true }
opentelemetry-stdout = { workspace = true }
opentelemetry-zipkin = { workspace = true }
opentelemetry_sdk = { workspace = true }
# tracing
tracing-subscriber = { workspace = true }
